parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list main_block DOT
Rule 2     declaration_list -> declaration_list function_decl
Rule 3     declaration_list -> empty
Rule 4     function_decl -> DEF IDENTIFIER LPAREN param_list RPAREN block
Rule 5     param_list -> param_list_nonempty
Rule 6     param_list -> empty
Rule 7     param_list_nonempty -> param_list_nonempty COMMA IDENTIFIER
Rule 8     param_list_nonempty -> IDENTIFIER
Rule 9     main_block -> block
Rule 10    block -> BEGIN statement_list END
Rule 11    statement_list -> statement_list statement SEMICOLON
Rule 12    statement_list -> statement SEMICOLON
Rule 13    statement -> assignment_stmt
Rule 14    statement -> array_decl
Rule 15    statement -> if_stmt
Rule 16    statement -> while_stmt
Rule 17    statement -> for_stmt
Rule 18    statement -> read_stmt
Rule 19    statement -> write_stmt
Rule 20    statement -> return_stmt
Rule 21    statement -> function_call_stmt
Rule 22    statement -> block
Rule 23    statement -> empty
Rule 24    empty -> <empty>
Rule 25    array_decl -> ARRAY IDENTIFIER LBRACKET expression RBRACKET
Rule 26    assignment_stmt -> IDENTIFIER ASSIGN expression
Rule 27    assignment_stmt -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
Rule 28    if_stmt -> IF expression THEN statement
Rule 29    if_stmt -> IF expression THEN statement ELSE statement
Rule 30    while_stmt -> WHILE expression DO statement
Rule 31    for_stmt -> FOR IDENTIFIER ASSIGN expression TO expression DO statement
Rule 32    read_stmt -> READ LPAREN IDENTIFIER RPAREN
Rule 33    read_stmt -> READ LPAREN IDENTIFIER LBRACKET expression RBRACKET RPAREN
Rule 34    write_stmt -> WRITE LPAREN expression RPAREN
Rule 35    return_stmt -> RETURN expression
Rule 36    function_call_stmt -> IDENTIFIER LPAREN arg_list RPAREN
Rule 37    arg_list -> arg_list_nonempty
Rule 38    arg_list -> empty
Rule 39    arg_list_nonempty -> arg_list_nonempty COMMA expression
Rule 40    arg_list_nonempty -> expression
Rule 41    expression -> logical_expression
Rule 42    logical_expression -> logical_expression OR logical_and_expr
Rule 43    logical_expression -> logical_and_expr
Rule 44    logical_and_expr -> logical_and_expr AND rel_expr
Rule 45    logical_and_expr -> rel_expr
Rule 46    rel_expr -> math_expr RELOP math_expr
Rule 47    rel_expr -> math_expr
Rule 48    math_expr -> math_expr ADD_OP term
Rule 49    math_expr -> term
Rule 50    term -> term MULT_OP factor
Rule 51    term -> factor
Rule 52    factor -> IDENTIFIER
Rule 53    factor -> IDENTIFIER LBRACKET expression RBRACKET
Rule 54    factor -> IDENTIFIER LPAREN arg_list RPAREN
Rule 55    factor -> INTEGER
Rule 56    factor -> FLOAT
Rule 57    factor -> STR
Rule 58    factor -> TRUE
Rule 59    factor -> FALSE
Rule 60    factor -> LPAREN expression RPAREN
Rule 61    factor -> NOT factor
Rule 62    factor -> ADD_OP factor

Terminals, with rules where they appear

ADD_OP               : 48 62
AND                  : 44
ARRAY                : 25
ASSIGN               : 26 27 31
BEGIN                : 10
COMMA                : 7 39
DEF                  : 4
DO                   : 30 31
DOT                  : 1
ELSE                 : 29
END                  : 10
FALSE                : 59
FLOAT                : 56
FOR                  : 31
IDENTIFIER           : 4 7 8 25 26 27 31 32 33 36 52 53 54
IF                   : 28 29
INTEGER              : 55
LBRACKET             : 25 27 33 53
LPAREN               : 4 32 33 34 36 54 60
MULT_OP              : 50
NOT                  : 61
OR                   : 42
RBRACKET             : 25 27 33 53
READ                 : 32 33
RELOP                : 46
RETURN               : 35
RPAREN               : 4 32 33 34 36 54 60
SEMICOLON            : 11 12
STR                  : 57
THEN                 : 28 29
TO                   : 31
TRUE                 : 58
WHILE                : 30
WRITE                : 34
error                : 

Nonterminals, with rules where they appear

arg_list             : 36 54
arg_list_nonempty    : 37 39
array_decl           : 14
assignment_stmt      : 13
block                : 4 9 22
declaration_list     : 1 2
empty                : 3 6 23 38
expression           : 25 26 27 27 28 29 30 31 31 33 34 35 39 40 53 60
factor               : 50 51 61 62
for_stmt             : 17
function_call_stmt   : 21
function_decl        : 2
if_stmt              : 15
logical_and_expr     : 42 43 44
logical_expression   : 41 42
main_block           : 1
math_expr            : 46 46 47 48
param_list           : 4
param_list_nonempty  : 5 7
program              : 0
read_stmt            : 18
rel_expr             : 44 45
return_stmt          : 20
statement            : 11 12 28 29 29 30 31
statement_list       : 10 11
term                 : 48 49 50
while_stmt           : 16
write_stmt           : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list main_block DOT
    (2) declaration_list -> . declaration_list function_decl
    (3) declaration_list -> . empty
    (24) empty -> .

    DEF             reduce using rule 24 (empty -> .)
    BEGIN           reduce using rule 24 (empty -> .)

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list . main_block DOT
    (2) declaration_list -> declaration_list . function_decl
    (9) main_block -> . block
    (4) function_decl -> . DEF IDENTIFIER LPAREN param_list RPAREN block
    (10) block -> . BEGIN statement_list END

    DEF             shift and go to state 7
    BEGIN           shift and go to state 8

    main_block                     shift and go to state 4
    function_decl                  shift and go to state 5
    block                          shift and go to state 6

state 3

    (3) declaration_list -> empty .

    DEF             reduce using rule 3 (declaration_list -> empty .)
    BEGIN           reduce using rule 3 (declaration_list -> empty .)


state 4

    (1) program -> declaration_list main_block . DOT

    DOT             shift and go to state 9


state 5

    (2) declaration_list -> declaration_list function_decl .

    DEF             reduce using rule 2 (declaration_list -> declaration_list function_decl .)
    BEGIN           reduce using rule 2 (declaration_list -> declaration_list function_decl .)


state 6

    (9) main_block -> block .

    DOT             reduce using rule 9 (main_block -> block .)


state 7

    (4) function_decl -> DEF . IDENTIFIER LPAREN param_list RPAREN block

    IDENTIFIER      shift and go to state 10


state 8

    (10) block -> BEGIN . statement_list END
    (11) statement_list -> . statement_list statement SEMICOLON
    (12) statement_list -> . statement SEMICOLON
    (13) statement -> . assignment_stmt
    (14) statement -> . array_decl
    (15) statement -> . if_stmt
    (16) statement -> . while_stmt
    (17) statement -> . for_stmt
    (18) statement -> . read_stmt
    (19) statement -> . write_stmt
    (20) statement -> . return_stmt
    (21) statement -> . function_call_stmt
    (22) statement -> . block
    (23) statement -> . empty
    (26) assignment_stmt -> . IDENTIFIER ASSIGN expression
    (27) assignment_stmt -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (25) array_decl -> . ARRAY IDENTIFIER LBRACKET expression RBRACKET
    (28) if_stmt -> . IF expression THEN statement
    (29) if_stmt -> . IF expression THEN statement ELSE statement
    (30) while_stmt -> . WHILE expression DO statement
    (31) for_stmt -> . FOR IDENTIFIER ASSIGN expression TO expression DO statement
    (32) read_stmt -> . READ LPAREN IDENTIFIER RPAREN
    (33) read_stmt -> . READ LPAREN IDENTIFIER LBRACKET expression RBRACKET RPAREN
    (34) write_stmt -> . WRITE LPAREN expression RPAREN
    (35) return_stmt -> . RETURN expression
    (36) function_call_stmt -> . IDENTIFIER LPAREN arg_list RPAREN
    (10) block -> . BEGIN statement_list END
    (24) empty -> .

    IDENTIFIER      shift and go to state 24
    ARRAY           shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    READ            shift and go to state 29
    WRITE           shift and go to state 30
    RETURN          shift and go to state 31
    BEGIN           shift and go to state 8
    SEMICOLON       reduce using rule 24 (empty -> .)

    statement_list                 shift and go to state 11
    statement                      shift and go to state 12
    assignment_stmt                shift and go to state 13
    array_decl                     shift and go to state 14
    if_stmt                        shift and go to state 15
    while_stmt                     shift and go to state 16
    for_stmt                       shift and go to state 17
    read_stmt                      shift and go to state 18
    write_stmt                     shift and go to state 19
    return_stmt                    shift and go to state 20
    function_call_stmt             shift and go to state 21
    block                          shift and go to state 22
    empty                          shift and go to state 23

state 9

    (1) program -> declaration_list main_block DOT .

    $end            reduce using rule 1 (program -> declaration_list main_block DOT .)


state 10

    (4) function_decl -> DEF IDENTIFIER . LPAREN param_list RPAREN block

    LPAREN          shift and go to state 32


state 11

    (10) block -> BEGIN statement_list . END
    (11) statement_list -> statement_list . statement SEMICOLON
    (13) statement -> . assignment_stmt
    (14) statement -> . array_decl
    (15) statement -> . if_stmt
    (16) statement -> . while_stmt
    (17) statement -> . for_stmt
    (18) statement -> . read_stmt
    (19) statement -> . write_stmt
    (20) statement -> . return_stmt
    (21) statement -> . function_call_stmt
    (22) statement -> . block
    (23) statement -> . empty
    (26) assignment_stmt -> . IDENTIFIER ASSIGN expression
    (27) assignment_stmt -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (25) array_decl -> . ARRAY IDENTIFIER LBRACKET expression RBRACKET
    (28) if_stmt -> . IF expression THEN statement
    (29) if_stmt -> . IF expression THEN statement ELSE statement
    (30) while_stmt -> . WHILE expression DO statement
    (31) for_stmt -> . FOR IDENTIFIER ASSIGN expression TO expression DO statement
    (32) read_stmt -> . READ LPAREN IDENTIFIER RPAREN
    (33) read_stmt -> . READ LPAREN IDENTIFIER LBRACKET expression RBRACKET RPAREN
    (34) write_stmt -> . WRITE LPAREN expression RPAREN
    (35) return_stmt -> . RETURN expression
    (36) function_call_stmt -> . IDENTIFIER LPAREN arg_list RPAREN
    (10) block -> . BEGIN statement_list END
    (24) empty -> .

    END             shift and go to state 33
    IDENTIFIER      shift and go to state 24
    ARRAY           shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    READ            shift and go to state 29
    WRITE           shift and go to state 30
    RETURN          shift and go to state 31
    BEGIN           shift and go to state 8
    SEMICOLON       reduce using rule 24 (empty -> .)

    statement                      shift and go to state 34
    assignment_stmt                shift and go to state 13
    array_decl                     shift and go to state 14
    if_stmt                        shift and go to state 15
    while_stmt                     shift and go to state 16
    for_stmt                       shift and go to state 17
    read_stmt                      shift and go to state 18
    write_stmt                     shift and go to state 19
    return_stmt                    shift and go to state 20
    function_call_stmt             shift and go to state 21
    block                          shift and go to state 22
    empty                          shift and go to state 23

state 12

    (12) statement_list -> statement . SEMICOLON

    SEMICOLON       shift and go to state 35


state 13

    (13) statement -> assignment_stmt .

    SEMICOLON       reduce using rule 13 (statement -> assignment_stmt .)
    ELSE            reduce using rule 13 (statement -> assignment_stmt .)


state 14

    (14) statement -> array_decl .

    SEMICOLON       reduce using rule 14 (statement -> array_decl .)
    ELSE            reduce using rule 14 (statement -> array_decl .)


state 15

    (15) statement -> if_stmt .

    SEMICOLON       reduce using rule 15 (statement -> if_stmt .)
    ELSE            reduce using rule 15 (statement -> if_stmt .)


state 16

    (16) statement -> while_stmt .

    SEMICOLON       reduce using rule 16 (statement -> while_stmt .)
    ELSE            reduce using rule 16 (statement -> while_stmt .)


state 17

    (17) statement -> for_stmt .

    SEMICOLON       reduce using rule 17 (statement -> for_stmt .)
    ELSE            reduce using rule 17 (statement -> for_stmt .)


state 18

    (18) statement -> read_stmt .

    SEMICOLON       reduce using rule 18 (statement -> read_stmt .)
    ELSE            reduce using rule 18 (statement -> read_stmt .)


state 19

    (19) statement -> write_stmt .

    SEMICOLON       reduce using rule 19 (statement -> write_stmt .)
    ELSE            reduce using rule 19 (statement -> write_stmt .)


state 20

    (20) statement -> return_stmt .

    SEMICOLON       reduce using rule 20 (statement -> return_stmt .)
    ELSE            reduce using rule 20 (statement -> return_stmt .)


state 21

    (21) statement -> function_call_stmt .

    SEMICOLON       reduce using rule 21 (statement -> function_call_stmt .)
    ELSE            reduce using rule 21 (statement -> function_call_stmt .)


state 22

    (22) statement -> block .

    SEMICOLON       reduce using rule 22 (statement -> block .)
    ELSE            reduce using rule 22 (statement -> block .)


state 23

    (23) statement -> empty .

    SEMICOLON       reduce using rule 23 (statement -> empty .)
    ELSE            reduce using rule 23 (statement -> empty .)


state 24

    (26) assignment_stmt -> IDENTIFIER . ASSIGN expression
    (27) assignment_stmt -> IDENTIFIER . LBRACKET expression RBRACKET ASSIGN expression
    (36) function_call_stmt -> IDENTIFIER . LPAREN arg_list RPAREN

    ASSIGN          shift and go to state 36
    LBRACKET        shift and go to state 37
    LPAREN          shift and go to state 38


state 25

    (25) array_decl -> ARRAY . IDENTIFIER LBRACKET expression RBRACKET

    IDENTIFIER      shift and go to state 39


state 26

    (28) if_stmt -> IF . expression THEN statement
    (29) if_stmt -> IF . expression THEN statement ELSE statement
    (41) expression -> . logical_expression
    (42) logical_expression -> . logical_expression OR logical_and_expr
    (43) logical_expression -> . logical_and_expr
    (44) logical_and_expr -> . logical_and_expr AND rel_expr
    (45) logical_and_expr -> . rel_expr
    (46) rel_expr -> . math_expr RELOP math_expr
    (47) rel_expr -> . math_expr
    (48) math_expr -> . math_expr ADD_OP term
    (49) math_expr -> . term
    (50) term -> . term MULT_OP factor
    (51) term -> . factor
    (52) factor -> . IDENTIFIER
    (53) factor -> . IDENTIFIER LBRACKET expression RBRACKET
    (54) factor -> . IDENTIFIER LPAREN arg_list RPAREN
    (55) factor -> . INTEGER
    (56) factor -> . FLOAT
    (57) factor -> . STR
    (58) factor -> . TRUE
    (59) factor -> . FALSE
    (60) factor -> . LPAREN expression RPAREN
    (61) factor -> . NOT factor
    (62) factor -> . ADD_OP factor

    IDENTIFIER      shift and go to state 48
    INTEGER         shift and go to state 50
    FLOAT           shift and go to state 51
    STR             shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    LPAREN          shift and go to state 49
    NOT             shift and go to state 55
    ADD_OP          shift and go to state 45

    expression                     shift and go to state 40
    logical_expression             shift and go to state 41
    logical_and_expr               shift and go to state 42
    rel_expr                       shift and go to state 43
    math_expr                      shift and go to state 44
    term                           shift and go to state 46
    factor                         shift and go to state 47

state 27

    (30) while_stmt -> WHILE . expression DO statement
    (41) expression -> . logical_expression
    (42) logical_expression -> . logical_expression OR logical_and_expr
    (43) logical_expression -> . logical_and_expr
    (44) logical_and_expr -> . logical_and_expr AND rel_expr
    (45) logical_and_expr -> . rel_expr
    (46) rel_expr -> . math_expr RELOP math_expr
    (47) rel_expr -> . math_expr
    (48) math_expr -> . math_expr ADD_OP term
    (49) math_expr -> . term
    (50) term -> . term MULT_OP factor
    (51) term -> . factor
    (52) factor -> . IDENTIFIER
    (53) factor -> . IDENTIFIER LBRACKET expression RBRACKET
    (54) factor -> . IDENTIFIER LPAREN arg_list RPAREN
    (55) factor -> . INTEGER
    (56) factor -> . FLOAT
    (57) factor -> . STR
    (58) factor -> . TRUE
    (59) factor -> . FALSE
    (60) factor -> . LPAREN expression RPAREN
    (61) factor -> . NOT factor
    (62) factor -> . ADD_OP factor

    IDENTIFIER      shift and go to state 48
    INTEGER         shift and go to state 50
    FLOAT           shift and go to state 51
    STR             shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    LPAREN          shift and go to state 49
    NOT             shift and go to state 55
    ADD_OP          shift and go to state 45

    expression                     shift and go to state 56
    logical_expression             shift and go to state 41
    logical_and_expr               shift and go to state 42
    rel_expr                       shift and go to state 43
    math_expr                      shift and go to state 44
    term                           shift and go to state 46
    factor                         shift and go to state 47

state 28

    (31) for_stmt -> FOR . IDENTIFIER ASSIGN expression TO expression DO statement

    IDENTIFIER      shift and go to state 57


state 29

    (32) read_stmt -> READ . LPAREN IDENTIFIER RPAREN
    (33) read_stmt -> READ . LPAREN IDENTIFIER LBRACKET expression RBRACKET RPAREN

    LPAREN          shift and go to state 58


state 30

    (34) write_stmt -> WRITE . LPAREN expression RPAREN

    LPAREN          shift and go to state 59


state 31

    (35) return_stmt -> RETURN . expression
    (41) expression -> . logical_expression
    (42) logical_expression -> . logical_expression OR logical_and_expr
    (43) logical_expression -> . logical_and_expr
    (44) logical_and_expr -> . logical_and_expr AND rel_expr
    (45) logical_and_expr -> . rel_expr
    (46) rel_expr -> . math_expr RELOP math_expr
    (47) rel_expr -> . math_expr
    (48) math_expr -> . math_expr ADD_OP term
    (49) math_expr -> . term
    (50) term -> . term MULT_OP factor
    (51) term -> . factor
    (52) factor -> . IDENTIFIER
    (53) factor -> . IDENTIFIER LBRACKET expression RBRACKET
    (54) factor -> . IDENTIFIER LPAREN arg_list RPAREN
    (55) factor -> . INTEGER
    (56) factor -> . FLOAT
    (57) factor -> . STR
    (58) factor -> . TRUE
    (59) factor -> . FALSE
    (60) factor -> . LPAREN expression RPAREN
    (61) factor -> . NOT factor
    (62) factor -> . ADD_OP factor

    IDENTIFIER      shift and go to state 48
    INTEGER         shift and go to state 50
    FLOAT           shift and go to state 51
    STR             shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    LPAREN          shift and go to state 49
    NOT             shift and go to state 55
    ADD_OP          shift and go to state 45

    expression                     shift and go to state 60
    logical_expression             shift and go to state 41
    logical_and_expr               shift and go to state 42
    rel_expr                       shift and go to state 43
    math_expr                      shift and go to state 44
    term                           shift and go to state 46
    factor                         shift and go to state 47

state 32

    (4) function_decl -> DEF IDENTIFIER LPAREN . param_list RPAREN block
    (5) param_list -> . param_list_nonempty
    (6) param_list -> . empty
    (7) param_list_nonempty -> . param_list_nonempty COMMA IDENTIFIER
    (8) param_list_nonempty -> . IDENTIFIER
    (24) empty -> .

    IDENTIFIER      shift and go to state 61
    RPAREN          reduce using rule 24 (empty -> .)

    param_list                     shift and go to state 62
    param_list_nonempty            shift and go to state 63
    empty                          shift and go to state 64

state 33

    (10) block -> BEGIN statement_list END .

    DOT             reduce using rule 10 (block -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 10 (block -> BEGIN statement_list END .)
    ELSE            reduce using rule 10 (block -> BEGIN statement_list END .)
    DEF             reduce using rule 10 (block -> BEGIN statement_list END .)
    BEGIN           reduce using rule 10 (block -> BEGIN statement_list END .)


state 34

    (11) statement_list -> statement_list statement . SEMICOLON

    SEMICOLON       shift and go to state 65


state 35

    (12) statement_list -> statement SEMICOLON .

    END             reduce using rule 12 (statement_list -> statement SEMICOLON .)
    IDENTIFIER      reduce using rule 12 (statement_list -> statement SEMICOLON .)
    ARRAY           reduce using rule 12 (statement_list -> statement SEMICOLON .)
    IF              reduce using rule 12 (statement_list -> statement SEMICOLON .)
    WHILE           reduce using rule 12 (statement_list -> statement SEMICOLON .)
    FOR             reduce using rule 12 (statement_list -> statement SEMICOLON .)
    READ            reduce using rule 12 (statement_list -> statement SEMICOLON .)
    WRITE           reduce using rule 12 (statement_list -> statement SEMICOLON .)
    RETURN          reduce using rule 12 (statement_list -> statement SEMICOLON .)
    BEGIN           reduce using rule 12 (statement_list -> statement SEMICOLON .)
    SEMICOLON       reduce using rule 12 (statement_list -> statement SEMICOLON .)


state 36

    (26) assignment_stmt -> IDENTIFIER ASSIGN . expression
    (41) expression -> . logical_expression
    (42) logical_expression -> . logical_expression OR logical_and_expr
    (43) logical_expression -> . logical_and_expr
    (44) logical_and_expr -> . logical_and_expr AND rel_expr
    (45) logical_and_expr -> . rel_expr
    (46) rel_expr -> . math_expr RELOP math_expr
    (47) rel_expr -> . math_expr
    (48) math_expr -> . math_expr ADD_OP term
    (49) math_expr -> . term
    (50) term -> . term MULT_OP factor
    (51) term -> . factor
    (52) factor -> . IDENTIFIER
    (53) factor -> . IDENTIFIER LBRACKET expression RBRACKET
    (54) factor -> . IDENTIFIER LPAREN arg_list RPAREN
    (55) factor -> . INTEGER
    (56) factor -> . FLOAT
    (57) factor -> . STR
    (58) factor -> . TRUE
    (59) factor -> . FALSE
    (60) factor -> . LPAREN expression RPAREN
    (61) factor -> . NOT factor
    (62) factor -> . ADD_OP factor

    IDENTIFIER      shift and go to state 48
    INTEGER         shift and go to state 50
    FLOAT           shift and go to state 51
    STR             shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    LPAREN          shift and go to state 49
    NOT             shift and go to state 55
    ADD_OP          shift and go to state 45

    expression                     shift and go to state 66
    logical_expression             shift and go to state 41
    logical_and_expr               shift and go to state 42
    rel_expr                       shift and go to state 43
    math_expr                      shift and go to state 44
    term                           shift and go to state 46
    factor                         shift and go to state 47

state 37
